--- a/resources/assets/sass/_buttons.scss
+++ b/resources/assets/sass/_buttons.scss
@@ -2,15 +2,18 @@
   font-weight: 500;
   color: white;
   background-color: $red;
+  border-color: $red;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+  @include transition(all, 0.15s);
 }
 
 .cta-mini {
   padding-top: 0.35rem;
   padding-bottom: 0.35rem;
+  @include transition(all, 0.15s);
 }
 
 .border-grey {
