--- a/resources/views/apply.html
+++ b/resources/views/apply.html
@@ -1,6 +1,32 @@
-<nav class="dt w-100 mw8 center border-box pv3 ph3 ph2-l">
+<!DOCTYPE html>
+<html dir='ltr' lang='en-US'>
+  <head>
+    <meta charset='utf-8'>
+    <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' name='viewport'>
+    <meta content='.' property='og:description'>
+    <meta content='' property='og:image'>
+    <meta content='' property='og:site_name'>
+    <meta content='' property='og:title'>
+    <meta content='website' property='og:type'>
+    <meta content='' property='og:url'>
+    <meta content='summary' name='twitter:card'>
+    <meta content='' name='twitter:url'>
+    <meta content='' name='twitter:title'>
+    <meta content='' name='twitter:description'>
+    <meta content='' name='twitter:image'>
+    <meta content='@' name='twitter:site'>
+    <link href='/img/favicon.ico' rel='shortcut icon'>
+    <link href='/img/apple-touch-icon.png' rel='apple-touch-icon'>
+    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.7.0/css/tachyons.min.css"/>
+    <link href='/css/style.css' rel='stylesheet'>
+    <title>Lol</title>
+  </head>
+  <body>
+    <header class="w-100 bg-white cover bg-left pv3">
+      <nav class="dt w-100 mw8 center border-box pv3 ph3 ph2-l">
         <div class="dtc w-25 h2">
-          <a class=" v-mid mid-gray link dim" href="/" title="Home">
+          <a class=" v-mid mid-gray link dim" href="#" title="Home">
             <svg width="155px" height="30px" viewBox="0 0 155 30" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                 <g transform="translate(-1.000000, -1.000000)">
@@ -25,3 +51,99 @@
           <a class="link dim f6 fw6 grow f6 fw6 f5-ns dim dib br-pill ba ph4 ph3-ns pv1 cta cta-mini" title="Built a bot" href="/" >Build a bot</a>
         </div>
       </nav>
+    </header>
+
+
+
+    <section class="mt5 mw8 w-100 center ph3-m ph2-l">
+      <div class="mb5 pa3 pa0-l">
+        <h1 class="mb2">Come work for us.</h1>
+        <p>We are looking for top-notch developers capable of building AI and chatbots. Sounds like a good fit for you?</p>
+      </div>
+
+      <form method="POST" action="/jobapplication/create">
+          <!-- {{ csrf_field() }} -->
+          <div class="form-group ">
+            <div class="w-100 dt">
+              <div class="fl w-100 w-40-l pa3 pl0-l">
+                <label for="full_name" class="f5 b db mb2">Full Name</label>
+                <input id="full_name" class="input-reset ba br3 bw2 b--black-10 pa1 ph3 mb2 db w-100" name="full_name" type="text" aria-describedby="name-desc" placeholder="Jhon Smith">
+                <!-- <small id="name-desc" class="f6 black-60 db mb2">Helper text for the form control.</small> -->
+              </div>
+              <div class="fl w-100 w-40-l pa3 pl0-l ml1-ns">
+                <label for="years_experience" class="f5 b db mb2">Years of experience</label>
+                <input id="years_experience" class="input-reset ba br3 bw2 b--black-10 pa1 ph3 mb2 db w-100" name="years_experience" type="text" aria-describedby="years_experience-desc" placeholder="3+ years">
+                <!-- <small id="company_name-desc" class="f6 black-60 db mb2">Helper text for the form control.</small> -->
+              </div>
+            </div>
+            <div class="w-100 dt">
+              <div class="fl w-100 w-40-l pa3 pl0-l">
+                <label for="email" class="f5 b db mb2">Email</label>
+                <input id="email" class="input-reset ba br3 bw2 b--black-10 pa1 ph3 mb2 db w-100" name="email" type="email" aria-describedby="email-desc" placeholder="example@gmail.com">
+                <!-- <small id="email-desc" class="f6 black-60 db mb2">Helper text for the form control.</small> -->
+              </div>
+              <div class="fl w-100 w-40-l pa3 pl0-l ml1-ns">
+                <label for="location" class="f5 b db mb2">What's your location?</label>
+                <input id="location" class="input-reset ba br3 bw2 b--black-10 pa1 ph3 mb2 db w-100" name="location" type="text" aria-describedby="location-desc" placeholder="United States">
+                <!-- <small id="location-desc" class="f6 black-60 db mb2">Helper text for the form control.</small> -->
+              </div>
+            </div>
+            <div class="w-100 dt">
+              <div class="fl w-100 w-80-l pa3 pl0-l">
+                <label for="portfolio" class="f5 b db mb2">Where’s your work? <span class="normal">(portfolio)</span></label>
+                <textarea id="portfolio" class="input-reset ba br3 bw2 b--black-10 pa1 ph3 pt3 pb3 mb2 br2 w-100" name="portfolio" type="text" aria-describedby="portfolio-desc" placeholder="github, linkedin, personal site, etc…"></textarea>
+                <!-- <small id="name-desc" class="f6 black-60 db mb2">Helper text for the form control.</small> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="w-100 dt">
+              <div class="fl w-50 w-40-l pa3 pl0-l">
+                <label class="f5 b db mb2">What’s your typical hourly rate?</label>
+                <select class="measure input-reset ba br3 bw2 b--black-10 pa2 ph3 mb2 db w-100 " required name="hourly_rate">
+                  <option value="1">20 - 40</option>
+                  <option value="2">40 - 60</option>
+                  <option value="3">60 - 80</option>
+                  <option value="3">80 - 100</option>
+                  <option value="4">+100</option>
+                </select>
+              </div>
+              <div class="fl w-50 w-40-l pa3 pl0-l">
+                <label class="f5 b db mb2">Hours per week are you available?</label>
+                <select class="measure input-reset ba br3 bw2 b--black-10 pa2 ph3 mb2 db w-100 " required name="hourly_rate">
+                  <option value="1">10 - 15</option>
+                  <option value="2">15 - 25</option>
+                  <option value="3">25 - 35</option>
+                  <option value="3">35 - 45</option>
+                  <option value="4">+45</option>
+                </select>
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group mb6">
+            <div class="fl w-100 w-80-l dt pa3 mb4 pl0-l">
+              <label for="comment" class="f5 b db mb2">Tell us why you are interested.</label>
+              <textarea id="comment" class="input-reset ba br3 bw2 b--black-10 pa1 ph3 pt3 pb6 mb2 br2 w-100" name="description" required aria-describedby="comment-desc" placeholder="Tell us about any additional project details that we should know"></textarea>
+              <!-- <small id="comment-desc" class="f6 black-60">Helper text for a form control. Can use this text to <a href="#" class="link underline black-80 hover-blue">link to more info.</a></small> -->
+            </div>
+            <div class="pa3 pa0-ns">
+              <button type="submit" class="f6 f5-ns dib br-pill ba ph4 pl3-m pv2 cta">Get started with your project <img class="ml2" src="img/r-arrow.svg" alt=""></button>
+            </div>
+          </div>
+
+
+      </form>
+    </section>
+
+    <footer class="pv4 ph3 ph5-m ph6-l">
+      <small class="f6 db tc">© 2017 <b class="ttu">Stark Ai LABS</b>., All Rights Reserved</small>
+      <div class="tc mt3">
+        <a href="/language/" title="Language" class="f6 dib ph2 link  dim">Language</a>
+        <a href="/terms/"    title="Terms" class="f6 dib ph2 link dim">Terms of Use</a>
+        <a href="/privacy/"  title="Privacy" class="f6 dib ph2 link  dim">Privacy</a>
+      </div>
+    </footer>
+</body>
+</html>
