--- a/resources/assets/sass/_buttons.scss
+++ b/resources/assets/sass/_buttons.scss
@@ -20,12 +20,22 @@
   border-color: $gray-border;
 }
 
+.radioholder {
+  box-sizing: border-box;
+}
+
 .radioholder:hover {
   border-color: #F24B3D;
   cursor: pointer;
 }
 
-input[type=radio]:checked+label {
-  /* Or `#a1:checked+label` if you only want it for that input */
+// input[type=radio]:checked+label {
+//   /* Or `#a1:checked+label` if you only want it for that input */
+//   border-color: #F24B3D;
+// }
+
+.checked {
   border-color: #F24B3D;
+  border: 1px solid;
+  border-radius: 3px;
 }
