Added checkbox for the bot request and store it in the database

--- a/resources/assets/sass/_buttons.scss
+++ b/resources/assets/sass/_buttons.scss
@@ -35,7 +35,6 @@
 // }
 
 .checked {
-  border-color: #F24B3D;
-  border: 1px solid;
-  border-radius: 3px;
+  border: .25rem solid #F24B3D;
+  border-radius: 0.5rem;
 }
