--- a/resources/assets/sass/_buttons.scss
+++ b/resources/assets/sass/_buttons.scss
@@ -1,12 +1,13 @@
 .cta {
-  font-weight: 500;
+  font-weight: bold;
   color: white;
   background-color: $red;
+  border: 4px solid;
   border-color: $red;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+  padding-top: 0.85rem;
+  padding-bottom: 0.85rem;
   @include transition(all, 0.15s);
 }
 
@@ -14,6 +15,12 @@
   padding-top: 0.35rem;
   padding-bottom: 0.35rem;
   @include transition(all, 0.15s);
+}
+
+.cta:hover, .cta-mini:hover {
+  background-color: #fff ;
+  border-color: $red;
+  color: $red;
 }
 
 .border-grey {
@@ -28,11 +35,6 @@
   border-color: #F24B3D;
   cursor: pointer;
 }
-
-// input[type=radio]:checked+label {
-//   /* Or `#a1:checked+label` if you only want it for that input */
-//   border-color: #F24B3D;
-// }
 
 .checked {
   border: .25rem solid #F24B3D;
