- Add favicon and minify css

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,6 @@
-// Fonts
-@import url("https://fonts.googleapis.com/css?family=Rubik:400,500,700");
-
+// // Fonts
+// @import url("https://fonts.googleapis.com/css?family=Rubik:400,500,700");
+@import "../../../node_modules/tachyons/css/tachyons.min";
 
 @import "variables";
 @import "mixins";
