--- a/resources/assets/sass/_buttons.scss
+++ b/resources/assets/sass/_buttons.scss
@@ -23,6 +23,12 @@
   color: $red;
 }
 
+input:focus, textarea:focus, select:focus {
+  outline: none !important;
+  border-color: $red;
+  @include transition(all, 0.15s);
+}
+
 .border-grey {
   border-color: $gray-border;
 }
